--- a/Day-3 React and Vite/src/index.css
+++ b/Day-3 React and Vite/src/index.css
@@ -33,3 +33,65 @@ body{
     padding: 10px 30px;
     font-weight: bold;
 }
+
+
+
+/* --------------Body Design------------- */
+
+
+.center-container{
+    width: 1300px;
+    min-height: calc(100vh - 100px);
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+.center-container .card{
+    width: 250px;
+    height: 300px;
+    padding: 10px 15px;
+    box-shadow: 0px 0px 4px 1px #b9b9b9;
+    border-radius: 7px;
+}
+
+
+.center-container .card .profile{
+    height: 65%;
+    background-color: #fff;
+}
+
+.center-container  img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.center-container .card .info{
+    height: 35%;
+}
+
+.center-container .info h2{
+    font-size: 14px;
+}
+
+.center-container .info h4{
+    color: #606060;
+    font-size: 13.5px;
+}
+
+.center-container .info h5{
+    color: grey;
+}
+
+.center-container button{
+    width: 100%;
+    padding: 7px 0px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: #222;
+    color: white;
+}
